* Prevent feedback messages from creating a gap between menu and content. (Profile template, profile.css) [Bug 2893]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@7824 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/profile.css
+++ b/Themes/curve/css/profile.css
@@ -141,3 +141,28 @@
 {
 	clear: both;
 }
+
+/* Simple feedback messages */
+div#profile_error, div#profile_success
+{
+	margin-bottom: 0.5em;
+	padding: 1ex 2ex;
+	border: 1px solid;
+}
+
+div#profile_error
+{
+	border-color: red;
+	color: red;
+}
+
+div#profile_error span
+{
+	text-decoration: underline;
+}
+
+div#profile_success
+{
+	border-color: green;
+	color: green;
+}
