--- a/Themes/default/css/profile.css
+++ b/Themes/default/css/profile.css
@@ -22,7 +22,6 @@
 	padding: 0.7em 1.2em;
 }
 
-
 /* The basic user info on the left */
 #basicinfo
 {
@@ -120,4 +119,29 @@
 {
 	font-size: 100%;
 	margin-bottom: 5px;
+}
+
+/* Simple feedback messages */
+div#profile_error, div#profile_success
+{
+	margin-bottom: 0.5em;
+	padding: 1ex 2ex;
+	border: 1px solid;
+}
+
+div#profile_error
+{
+	border-color: red;
+	color: red;
+}
+
+div#profile_error span
+{
+	text-decoration: underline;
+}
+
+div#profile_success
+{
+	border-color: green;
+	color: green;
 }
